# sentinel-portfolio-manager

./: .gitignore  BACKTEST_QUEUE.md  DEPLOY_PRECOG.md  DEPLOY_SNIPER.md  ENGINE_DECISION_2026-05-22.md  FIX_TIMELINE.md  POLY_SPEC.md  POLY_WORKFLOW.md  README.md  SPEC.md  SPEC_v2.1_DELTA.md.merged  SPEC_v2.1_DELTA.md.merged.README  STAGE1_GATES.md  STRATEGY_GATES.md  VALIDATION_UZT_REV.md  WORKFLOW.md  aws-userdata.sh  poly_signer.rs  render.yaml  requirements.txt
backtests/: ADJUSTMENTS_REPORT.md  BINANCE_AUDIT_20260517_2333.json  HONEST_AUDIT_20260517_2229.json  HONEST_AUDIT_20260517_2233.json  HONEST_AUDIT_20260517_2318.json  batch_20260516_0846.json  batch_20260516_0851.json  cross_coin_zscore_20260518.jsonl  cross_coin_zscore_20260519.jsonl  cross_coin_zscore_20260519.md  donchian_20260517.jsonl  donchian_20260517.md  donchian_20260519.jsonl  donchian_20260519.md  donchian_HL_1d_1d_10coins_20260516_0823.json  donchian_HL_1d_turtle_1d_20260516_0822.json  donchian_HL_1h_1h_96_48_20260516_0822.json  donchian_HL_1h_inv_10coin_180d_20260516_0827.json  donchian_HL_1h_inv_1h_90d_20260516_0824.json  donchian_HL_1h_inv_3coin_365d_20260516_0827.json  donchian_HL_1h_no_sc_inv_20260516_0825.json  donchian_HL_1h_no_sc_orig_20260516_0825.json  donchian_HL_1h_sym_inv_20260516_0826.json  donchian_HL_1h_sym_orig_20260516_0826.json  donchian_HL_20260516_0820.json  donchian_HL_4h_4h_40_20_20260516_0822.json  donchian_HL_4h_4h_60_30_20260516_0822.json  donchian_HL_4h_turtle_4h_20260516_0822.json  (+56 more)
poly_signer/: Cargo.toml
poly_signer/src/: eip712.rs  main.rs  socket.rs  submit.rs
(+254 files in other folders)
